--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     <div class="logo float-left">
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <h1 class="text-light"><a href="#header"><span>NewBiz</span></a></h1> -->
-      <a href="#intro" class="scrollto"><img src="{% static "jobsapp/img/portal_logo_big3.png" %}" alt="" width="100" height="450"></a>
+      <a href="{% url 'jobs:home-init' %}" class="scrollto"><img src="{% static "jobsapp/img/portal_logo_big3.png" %}" alt="" width="100" height="450"></a>
     </div>
 
     <nav class="main-nav float-right d-none d-lg-block">
@@ -100,7 +100,7 @@
             </li>
         {% endif %}
 
-        <li><a href="#intro" class="scrollto"><img src="{% static "jobsapp/img/sb_logo.png" %}" alt="" width="90" height="40"></a></li>
+        <li><a href="{% url 'jobs:home-init' %}" class="scrollto"><img src="{% static "jobsapp/img/sb_logo.png" %}" alt="" width="90" height="40"></a></li>
       </ul>
     </nav><!-- .main-nav -->
 
